# mywill_scanner

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  config.py  docker-compose.yaml  eth_payment_monitor.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt  server.py  tg_alerts.py
.github/workflows/: build_backend.yml
base/: ScannerManager.py  __init__.py  block.py  block_event.py  monitor.py  network.py  output.py  scanner.py  transaction.py  transaction_receipt.py
blockchain_common/: base_monitor.py  btc_rpc.py  litecoin_rpc.py  parity_interface.py  quras_rpc.py  wrapper_block.py  wrapper_network.py  wrapper_output.py  wrapper_transaction.py  wrapper_transaction_receipt.py
blockchain_common/eth_tokens/: __init__.py  crowdsale_abi.json  token_abi.json
contracts/: __init__.py  airdrop_abi.json  ico_abi.json  token_abi.json
eventscanner/contracts/: __init__.py  contract.py
eventscanner/monitors/: __init__.py  lock.py  transfer.py
eventscanner/queue/: pika_handler.py  subscribers.py  subscribers.py.save
logger/: __init__.py
monitors/: __init__.py  transfer.py
monitors/contract/: __init__.py  airdrop.py  deploy.py  eth_sending.py  finalized.py  initialized.py  ownership_transferred.py  (+1 more)
mywish_models/: models.py
networks/: __init__.py  networks_scan_entrypoint.py
postgres/: Dockerfile  init.sql  load_backup.sh
scanner/: ETHEREUM_MAINNET
settings/: __init__.py  config.example.yaml  config.py  const.py  constants.py
telegram_alerts/: __init__.py  bot.py  storage.py  tg_alerts.py
tokens/: __init__.py
(+55 files in other folders)
