[tool.poetry]
name = "mywill_scanner"
version = "0.1.0"
description = ""
authors = ["Ameize4 <ameize4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
certifi = "2020.4.5.2"
chardet = "3.0.4"
idna = "2.9"
pika = "1.1.0"
psycopg2-binary = "2.8.5"
Pypubsub = "4.0.3"
requests = "2.23.0"
SQLAlchemy = "1.3.17"
urllib3 = "1.25.9"
python-bitcoinrpc = "1.0"
web3 = "5.11.1"
PyYAML = "5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
